systemsdir = ${pkgdatadir}/systems
systems_DATA = \
	BLC.xml \
	hook.xml \
	holdback.xml \
	afcs.xml \
	gear.xml \
	fg_glue.xml \
	Autopilot.xml \
	airship_added_mass.xml \
	flaps.xml \
	FCS-pitch.xml \
	tail_wheel_lock.xml \
	FCS-yaw.xml \
	jsb_glue.xml \
	refuel.xml \
	GNCUtilities.xml \
	NWS.xml \
	alpha_buffet.xml \
	speedbrakes.xml \
	FCS-roll.xml \
	rpm_governor.xml \
	catapult.xml 
EXTRA_DIST=$(systems_data)
