systemsdir = ${pkgdatadir}/systems
systems_DATA = \
	hook.xml \
	gear.xml \
	BLC.xml \
	Autopilot.xml \
	jsb_glue.xml \
	FCS-roll.xml \
	afcs.xml \
	tail_wheel_lock.xml \
	alpha_buffet.xml \
	FCS-yaw.xml \
	catapult.xml \
	FCS-pitch.xml \
	airship_added_mass.xml \
	flaps.xml \
	speedbrakes.xml \
	fg_glue.xml \
	NWS.xml \
	rpm_governor.xml \
	refuel.xml \
	GNCUtilities.xml \
	holdback.xml 
EXTRA_DIST=$(systems_DATA)
