systemsdir = ${pkgdatadir}/systems
systems_DATA = \
	flaps.xml \
	holdback.xml \
	fg_glue.xml \
	FCS-pitch.xml \
	speedbrakes.xml \
	refuel.xml \
	BLC.xml \
	hook.xml \
	jsb_glue.xml \
	Autopilot.xml \
	airship_added_mass.xml \
	tail_wheel_lock.xml \
	rpm_governor.xml \
	catapult.xml \
	alpha_buffet.xml \
	NWS.xml \
	GNCUtilities.xml \
	gear.xml \
	FCS-roll.xml \
	FCS-yaw.xml \
	afcs.xml 
EXTRA_DIST=$(systems_DATA)
