SUBDIRS = \
	Engines \
	scripts \
	Datcom \
	Models 
aircraft_easystardir = ${pkgdatadir}/aircraft/easystar
aircraft_easystar_DATA = \
	easystar-windtunnel.xml \
	easystar.xml \
	easystar-windtunnel-set.xml \
	cruise_steady_turn_init.xml \
	easystar-datcom-set.xml \
	reset01.xml \
	easystar-datcom.xml \
	reset00.xml \
	easystar-sound.xml 
EXTRA_DIST=$(aircraft_easystar_DATA)
