Systems_datadir = ${p51d_datadir}/Systems
Systems_data = \
	Makefile.am \
	compressability.xml \
	mixture-control.xml \
	Makefile.in \
	Makefile \
	.cvsignore \
	propulsion.xml \
	electrical.xml \
	alpha-buffet.xml \
	crash-detect.xml \
	autothrottle.xml \
	weapons-weight.xml 
EXTRA_DIST=$(Systems_data)
